EnvQuey and ArmourSO manuals added.

--- a/2D Controller/HTML/CLASSES/MANUAL/ARMOUR-SO/armour-so.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/ARMOUR-SO/armour-so.html
@@ -23,6 +23,27 @@
             <h1>ArmourSO</h1>
             <a class="manual-or-scripting-button" href="../../SCRIPTING/ARMOUR-SO/armour-so.html">SWITCH TO SCRIPTING</a>
         </div>
+        <h2>Overview</h2>
+        <p>
+            The <b>ArmourSO</b> provides a tool for customization and creation of armours for entities in the game. It enhances the defense of characters and objects.
+            <br>
+            This component pairs well with <a class="redirect-link" href="../ENTITY-HEALTH/entity-health.html">EntityHealth</a> component found in the asset.
+        </p>
+        <br>
+        <h2>Create New Armour</h2>
+        <p>
+            To create a new armour, simply access the menu item by navigating to the "<b>Assets</b>" folder within your project files. From there, right-click and select
+            "<b>Create</b>," then choose "<b>Create New Armour</b>." This action sets you up with a scriptable object ready to define and adjust attacks in your project.
+        </p>
+        <br>
+        <img src="../../../../IMAGES/ARMOUR-SO/CreateNewArmour.png" alt="CreateNewArmour">
+        <br>
+        <h2>Armour Configuration</h2>
+        <p>
+            By creating a new armour, you can now configure its settings through the inspector.
+        </p>
+        <br>
+        <img src="../../../../IMAGES/ARMOUR-SO/ArmourDefault.png" alt="">
     </div>
 </body>
 </html>
