--- a/2D Controller/HTML/CLASSES/MANUAL/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/ENTITY-HEALTH/entity-health.html
@@ -51,7 +51,11 @@
             </tr>
             <tr>
                 <td class="label"><b>CanRegenHealth</b></td>
-                <td class="description">Whether or not your entity is able to regen missing health points.</td>
+                <td class="description">
+                    Whether or not your entity is able to regen missing health points.
+                    <br>
+                    This property can be dynamically adjusted at runtime to control the entity's health point regeneration, delaying or hastening the process as needed.
+                </td>
             </tr>
             <tr>
                 <td class="label"><b>InterruptWhenDamaged</b></td>
