--- a/2D Controller/HTML/CLASSES/SCRIPTING/ARMOUR-SO/armour-so.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ARMOUR-SO/armour-so.html
@@ -43,11 +43,11 @@
                 </tr>
                 <tr>
                     <td class="label"><span class="uninteractable-link">ArmourPoints</span></td>
-                    <td class="description">The total armour points.</td>
+                    <td class="description">The total armour points of the character/object.</td>
                 </tr>
                 <tr>
                     <td class="label"><span class="uninteractable-link">ArmourEffectiveness</span></td>
-                    <td class="description">The effectiveness of the armour.</td>
+                    <td class="description">The effectiveness of the armour. Lower values will increase the armour's strength, while higher values will decrease it.</td>
                 </tr>
             </table>
     </div>
