--- a/2D Controller/HTML/CLASSES/MANUAL/ATTACK-SO/attack-so.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/ATTACK-SO/attack-so.html
@@ -44,7 +44,7 @@
             you can adjust the parameters to suit your needs.
             <br><br>
             Locate the attack scriptable object within your project files and open it for editing. Inside the Inspector window, you'll discover a range of
-            options available for fine-tuning different aspects of the attack. These settings offer the flexibility to tailor the attack's behavior according
+            options available for fine-tuning different aspects of the attack. These settings offer the flexibility to tailor the attack's behaviour according
             to your preferences, whether you aim to execute swift combos with quick strikes or unleash powerful blows with charged attacks.
         </p>
         <br>
