--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-normal-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-normal-attack.html
@@ -117,7 +117,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         <br><hr><br>
         <p>
             In the following example, a reference to a spawn point for a projectile is passed to the function. It's important to highlight that the attack must be configured to launch a
-            projectile (<b>ThrowsProjectile</b> = <b>true</b>). This holds true regardless of whether the attack is designated as a <b>normal</b> or <b>chargeable</b> attack.
+            projectile (<b>ThrowsProjectile</b> = <b>true</b>). This holds true regardless of whether the attack is designated as a <b>normal</b> or <b>chargeable</b> attack. (<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a>)
         </p>
 
 <pre class="code-block">
