DashEffect.cs Documentation added (scripting and manual)

--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -103,8 +103,8 @@
                 </tr>
                 <tr>
                     <td class="label-classes">DashEffect</td>
-                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-manual"><a class="redirect-link" href="MANUAL/DASH-EFFECT/dash-effect.html">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/DASH-EFFECT/dash-effect.html">Scripting</a></td>
                 </tr>
             </table>
         </div>
