--- a/2D Controller/Documentation.html
+++ b/2D Controller/Documentation.html
@@ -15,29 +15,62 @@
     <iframe id="myIframe" src="HTML/navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <!-- <h3>Welcome to '2D Complete Character Controller,' a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
-        systems into your projects. This asset is crafted to streamline the development of dynamic and responsive characters, whether under player or AI control.</h3>
+        <h2>Overview</h2>
+        <p>
+            Welcome to '<b>2D Complete Character Controller</b>', a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
+            systems into your projects. This asset is crafted to streamline the development of dynamic and responsive characters, whether under <b>player</b> or <b>AI</b> control.
+        </p>
+        <br>
+        <h2>Key Features</h2>
+        <ul>
+            <li>
+                <b>Comprehensive Mechanics:</b>
+                <br>
+                Elevate your 2D game with a full suite of character mechanics, providing seamless movement, advanced combat actions, and responsive controls.
+            </li>
+            <br>
+            <li>
+                <b>Versatile Controller:</b>
+                <br>
+                Leverage the abstract Humanoid Controller class, to effortlessly build customized player and AI controllers, adapting to the specific requirements of your project.
+            </li>
+            <br>
+            <li>
+                <b>Simplified Combat System:</b>
+                <br>
+                Easily create dynamic attacks and combat sequences with the Combat System, requiring minimal coding for developers to implement engaging 2D combat experiences.
+            </li>   
+        </ul>
+        <br>
+        <h2>Example Scene</h2>
+        <p>
+            Explore the capabilities of the controller with a dedicated example scene. This scene showcases practical examples, demonstrating what
+            can be achieved using the asset.
+        </p>
 
-        <h1 style="margin-bottom: 0;">• Key Features:</h1>
-        <h2>-Comprehensive Mechanics:</h2>
-        <h3>Elevate your 2D game with a full suite of character mechanics, providing seamless movement, advanced combat actions, and responsive controls.</h3>
-
-        <h2>-Versatile Controller:</h2>
-        <h3>Leverage the abstract Humanoid Controller class, to effortlessly build customized player and AI controllers, adapting to the specific requirements of your project.</h3>
-
-        <h2>-Simplified Combat System:</h2>
-        <h3>Easily create dynamic attacks and combat sequences with the Combat System, requiring minimal coding for developers to implement engaging 2D combat experiences.</h3>
-
-        <h1>• Example Scene:</h1>
-        <h3>Explore the capabilities of the '2D Complete Character Controller' with a dedicated example scene. This scene showcases practical examples, demonstrating what can be achieved using the asset.</h3>
-
-        <h2>-Fully Functional Player Character:</h2>
-        <h3>Take control of a character equipped with advanced mechanics. Experience fluid movement, execute dynamic attacks, and enjoy responsive controls.</h3>
-
-        <h2>-AI Character:</h2>
-        <h3>Encounter a dummy AI character. Use it to observe the combat system, experiment with provided attacks, and evaluate the system's versatility.
-
-        Immerse yourself in the example scene to gain a deeper understanding of how the '2D Complete Character Controller' can elevate your 2D game development experience.</h3> -->
+        <ul>
+            <li>
+                <b>Fully Functional Player Character:</b>
+                <br>
+                Take control of a character equipped with advanced mechanics. Experience fluid movement, execute dynamic attacks, and enjoy responsive controls.
+            </li>
+            <br>
+            <li>
+                <b>AI Character:</b>
+                <br>
+                Encounter a dummy AI character. Use it to observe the combat system, experiment with provided attacks, and evaluate the system's versatility.
+            </li>
+            <br>
+            <li>
+                <b>UI Elements:</b>
+                <br>
+                Track cooldowns and character health using included UI elements, providing visual feedback on character status and abilities.
+            </li>
+        </ul>
+        <br>
+        <p>
+        Immerse yourself in the example scene to gain a deeper understanding of how the controller can elevate your 2D game development experience.
+        </p>
     </div>
 </body>
 </html>
