Added page titles

--- a/2D Controller/Documentation.html
+++ b/2D Controller/Documentation.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="CSS/scroll-bar.css">
     <link rel="stylesheet" href="CSS/general.css">
     <link rel="stylesheet" href="CSS/navigation-bar.css">
+    <link rel="stylesheet" href="CSS/class-title.css">
 </head>
 
 <body>
     <iframe id="myIframe" src="HTML/navigation-bar.html"></iframe>
 
     <div class="main-page-division">
+        <div class="page-title">
+            <span>2D Complete Character Controller</span>
+        </div>
         <h2>Overview</h2>
         <p>
             Welcome to '<b>2D Complete Character Controller</b>', a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
@@ -32,13 +36,13 @@
             <li>
                 <b>Versatile Controller:</b>
                 <br>
-                Leverage the abstract Humanoid Controller class, to effortlessly build customized player and AI controllers, adapting to the specific requirements of your project.
+                Utilize the <a class="redirect-link" href="HTML/locomotion-controller.html">Locomotion System</a> to effortlessly build customized player and AI controllers, adapting to the specific requirements of your project.
             </li>
             <br>
             <li>
                 <b>Simplified Combat System:</b>
                 <br>
-                Easily create dynamic attacks and combat sequences with the Combat System, requiring minimal coding for developers to implement engaging 2D combat experiences.
+                Easily create dynamic attacks and combat sequences with the <a class="redirect-link" href="HTML/combat-system.html">Combat System</a>, requiring minimal coding for developers to implement engaging 2D combat experiences.
             </li>   
         </ul>
         <br>
