--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -10,11 +10,15 @@
     <link rel="stylesheet" href="../../CSS/navigation-bar.css">
     <link rel="stylesheet" href="../../CSS/general.css">
     <link rel="stylesheet" href="../../CSS/table.css">
+    <link rel="stylesheet" href="../../CSS/class-title.css">
 </head>
 <body>
     <iframe src="../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
+        <div class="page-title">
+            <span>Classes</span>
+        </div>
         <div class="table-division">
             <span class="table-title">Locomotion System</span>
             <table>
