--- a/2D Controller/HTML/combat-system.html
+++ b/2D Controller/HTML/combat-system.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="../CSS/scroll-bar.css">
     <link rel="stylesheet" href="../CSS/general.css">
     <link rel="stylesheet" href="../CSS/navigation-bar.css">
+    <link rel="stylesheet" href="../CSS/class-title.css">
 </head>
 <body>
     <iframe src="navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>This is the combat system page</h1>
+        <div class="page-title">
+            <span>Combat System</span>
+        </div>
     </div>
 </body>
