--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-SLIDE/character-slide.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-SLIDE/character-slide.html
@@ -55,6 +55,10 @@
                     the character will commence accelerating downwards based on the specified value.
                 </td>
             </tr>
+            <tr>
+                <td class="label"><b>ResetVelocityOnWall</b></td>
+                <td class="description">Reset the character's velocity to zero when starting wall sliding if the velocity is less than or equal to zero.</td>
+            </tr>
         </table>
     </div>
 </body>
