--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/set-active-collider.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/set-active-collider.html
@@ -41,7 +41,7 @@
             <br> <br>
             An illustrative example within this asset can be found in the <a class="redirect-link" href="../../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a>
             class. When the <a class="redirect-link" href="../../HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html">TryFloorSlide</a> function executes successfully, the active
-            collider of the character transitions from the VerticalCollider to the HorizontalCollider. This transition is communicated to the <b>CharacterEnvironmentalQuery</b> class
+            collider of the character transitions from the <b>vertical collider</b> to the <b>horizontal collider</b>. This transition is communicated to the <b>CharacterEnvironmentalQuery</b> class
             using the <b>SetActiveCollider</b> function.
         </p>
         <br>
