--- a/2D Controller/HTML/getting-started.html
+++ b/2D Controller/HTML/getting-started.html
@@ -32,21 +32,21 @@
             This animator controller is pre-configured to seamlessly integrate with the created systems. Simply reference your desired animations to each state. 
             <br><br>
             <b>Important:</b> It's recommended not to remove any existing states, as it may result in unexpected behaviour. If you don't intend to use a specific state or lack
-            an animation for it, simply leave the animation reference empty.
+            an animation for it, simply leave the animation clip reference empty.
         </p>
         <br>
-        <img style="max-width: 80%;" src="../IMAGES/_GETTING-STARTED/AnimatorController.png" alt="AnimatorController">
+        <img class="img-large" src="../IMAGES/_GETTING-STARTED/AnimatorController.png" alt="AnimatorController">
         <br>
         <h2>CharacterTemplate Prefab:</h2>
         <p>
-            The prefab includes all necessary components for your character to utilize the provided mechanics within the asset and serves as a base character setup.
+            The prefab includes all necessary components for your character to utilize the provided systems within the asset and serves as a base character setup.
             <br>
             Default values are set for characters that are approximately <b>1.64</b> Unity units tall and <b>0.72</b> Unity units wide.
             <br><br>
             <b>Important:</b> Avoid <b>deleting</b> or <b>moving</b> any child objects within the prefab to prevent potential <b>bugs</b> and/or <b>errors</b>.
         </p>
         <br>
-        <img style="max-width: 80%;" src="../IMAGES/_GETTING-STARTED/CharacterTemplate.png" alt="CharacterTemplate">
+        <img class="img-large" src="../IMAGES/_GETTING-STARTED/CharacterTemplate.png" alt="CharacterTemplate">
         <br>
         <h2>CustomControllerTemplate Script:</h2>
         <p>
@@ -56,6 +56,6 @@
             according to your preferences.
         </p>
         <br>
-        <img style="max-width: 80%;" src="../IMAGES/_GETTING-STARTED/ScriptTemplate.png" alt="CharacterTemplate">
+        <img class="img-large" src="../IMAGES/_GETTING-STARTED/ScriptTemplate.png" alt="CharacterTemplate">
     </div>
 </body>
