--- a/2D Controller/HTML/navigation-bar.html
+++ b/2D Controller/HTML/navigation-bar.html
@@ -14,6 +14,7 @@
                 <li><a href="locomotion-controller.html" target="_top">Locomotion System</a></li>
                 <li><a href="combat-system.html" target="_top">Combat System</a></li>
                 <li><a href="CLASSES/classes.html" target="_top">Classes</a></li>
+                <li><a href="frequently-asked-questions.html" target="_top">FAQ</a></li>
             </ul>
         </div>
     </header>
